# boost-sales

./: .gitignore  LICENSE  README.md  commands.txt  pyproject.toml
data/: sales.csv
models/: model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I01/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I02/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I03/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I04/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I05/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I06/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I07/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I08/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I09/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I10/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I11/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I12/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I13/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I14/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I15/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I16/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
models/by_item/I17/: categories.json  model_h1.xgb.json  model_h2.xgb.json  model_h3.xgb.json  model_h4.xgb.json  model_h5.xgb.json  model_h6.xgb.json  model_h7.xgb.json
src/boost_sales/: __init__.py  cli.py  config.py
tests/: test_cli_imports.py
(+2351 files in other folders)
